[package]
name = "socks-proxy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["compat"] }
nom-bufreader = {features = ["async"], git = "https://github.com/cheako/nom-bufreader", branch = "patches-002" }
nom = "7"
futures-util = { version = "0", features = ["io"] }
thiserror = "1"
replace_with = "0"
bytes = "1"
