[package]
name = "socks-proxy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["compat"] }
nom-bufreader = { version = "0", features = ["async"] }
nom = "7"
futures-util = { version = "0", features = ["io"] }
thiserror = "1"
replace_with = "0"
bytes = "1"
clap = { version = "3", features = ["derive"] }